--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-rev": "~0.1.0",
     "grunt-concurrent": "~0.3.0",
     "grunt-htmlrefs": "~0.4.2",
-    "grunt-plato":"~0.2.1",
+    "grunt-plato": "~0.2.1",
     "load-grunt-tasks": "~0.1.0",
     "grunt-google-cdn": "~0.2.0",
     "grunt-ngmin": "~0.0.2",
@@ -38,7 +38,8 @@
     "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.4",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "grunt-shell": "~0.6.4"
   },
   "engines": {
     "node": ">=0.8.0"
